--- a/add_trip.html
+++ b/add_trip.html
@@ -90,7 +90,7 @@
             <button type="submit" class="btn btn-success" onclick="createTripRequest()">Submit <span class="fa fa-arrow-right"></span></button>      
         </form>
         <br>
-        <button><a href="trips.html">Go back to site list</a></button>
+        <button><a href="index.html">Go back to site list</a></button>
         <div>
         <br>
         <br>
