--- a/signup.html
+++ b/signup.html
@@ -1,81 +1,81 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <title>signup </title>
-    <style>
-        body {
-          font-family: Arial, Helvetica, sans-serif;
-          width: 600px; 
-          text-align: center; 
-          margin: auto;
-          margin-top: 50px;
-          background-color: #ccc;
-        }
-        form {
-          border: 3px solid #f1f1f1;
-          margin: 50px 0;
-          background-color: rgb(151, 163, 194);
-        }
-        input[type=text], input[type=password] {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            box-sizing: border-box;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-        }
-        button:hover {
-            opacity: 0.8;
-        }
-        .cancelbtn {
-            width: auto;
-            padding: 10px 18px;
-            background-color: #f44336;
-        }
-        .imgcontainer {
-            text-align: center;
-            margin: 24px 0 12px 0;
-        }
-        img.avatar {
-            width: 40%;
-            border-radius: 50%;
-        }
-        .container {
-            padding: 16px;
-        }
-        span.psw {
-            float: right;
-        }
-    </style>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en" dir="ltr">
+    <head>
+        <title>signup </title>
+        <style>
+            body {
+              font-family: Arial, Helvetica, sans-serif;
+              width: 600px; 
+              text-align: center; 
+              margin: auto;
+              margin-top: 50px;
+              background-color: #ccc;
+            }
+            form {
+              border: 3px solid #f1f1f1;
+              margin: 50px 0;
+              background-color: rgb(151, 163, 194);
+            }
+            input[type=text], input[type=password] {
+                width: 100%;
+                padding: 12px 20px;
+                margin: 8px 0;
+                display: inline-block;
+                border: 1px solid #ccc;
+                box-sizing: border-box;
+            }
+            button {
+                background-color: #4CAF50;
+                color: white;
+                padding: 14px 20px;
+                margin: 8px 0;
+                border: none;
+                cursor: pointer;
+                width: 100%;
+            }
+            button:hover {
+                opacity: 0.8;
+            }
+            .cancelbtn {
+                width: auto;
+                padding: 10px 18px;
+                background-color: #f44336;
+            }
+            .imgcontainer {
+                text-align: center;
+                margin: 24px 0 12px 0;
+            }
+            img.avatar {
+                width: 40%;
+                border-radius: 50%;
+            }
+            .container {
+                padding: 16px;
+            }
+            span.psw {
+                float: right;
+            }
+        </style>
+    </head>
+    <body>
 
-<h1>SignUp user</h1>
-<form th:action="@{/login}" method="post">
-    <div class="container">
-        <label for="username"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" id="username" name="username"  required>
+    <h1>SignUp user</h1>
+    <form th:action="@{/login}" method="post">
+        <div class="container">
+            <label for="username"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" id="username" name="username"  required>
 
-        <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" id ="password" name="password" required>
-        <label for="password"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password " id ="password" name="password" required>
+            <label for="password"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" id ="password" name="password" required>
+            <label for="password"><b>Repeat Password</b></label>
+            <input type="password" placeholder="Repeat Password " id ="password" name="password" required>
 
-        <button type="submit">SignUp</button>
+            <button type="submit">SignUp</button>
 
-    </div>
+        </div>
 
-   
-</form>
 
-</body>
+    </form>
+
+    </body>
 </html>
