Updates to UI And jQuery Logic + README file

--- a/add_trip.html
+++ b/add_trip.html
@@ -29,15 +29,13 @@
                 <!-- starting date -->
                 <div id="date-group" class="form-group">
                     <label for="date">Start date</label>
-                    <input type="date" class="form-control" name="date" id="start_date"
-                        required>
+                    <input type="date" class="form-control" name="date" id="start_date" required>
                     <!-- errors will go here -->
                 </div>
                 <!-- duration -->
                 <div id="duration-group" class="form-group">
                     <label for="duration">Duration</label>
-                    <input type="number" class="form-control" name="duration" id="duration"
-                        placeholder="write duration here" required min="1"> 
+                    <input type="number" class="form-control" name="duration" id="duration" placeholder="write duration here" min="1" required> 
                     <!-- errors will go here -->
                 </div>
                 <!-- price of the trip -->
@@ -72,13 +70,13 @@
                 <!-- site name -->
                 <div id="site-group" class="form-group">
                     <label for="site">Site name</label>
-                    <input type="text" class="form-control" name="site" id="site_name" placeholder="pizza">
+                    <input type="text" class="form-control" name="site" id="site_name" placeholder="pizza" required>
                     <!-- errors will go here -->
                 </div>
                 <!-- site country -->
                 <div id="country-group" class="form-group">
                     <label for="country">Site country</label>
-                    <input type="text" class="form-control" name="country" id="site_country" placeholder="London">
+                    <input type="text" class="form-control" name="country" id="site_country" placeholder="London" required>
                     <!-- errors will go here -->
                 </div>
                 <br>
