--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
             <section>
                 <div id="displayTrips"></div>
                 <div id="displayTrip"></div>
-                <div id="displayDetails"></div>
                 <div id="editTrip">
                     <div class="col-sm-6 col-sm-offset-3">
-                        <h1>Update trip</h1>
+                        <h3>Update trip</h3>
                         <hr>
                         <!-- OUR FORM -->
                         <form id="trip_form" name="trip_form" method="UPDATE">          
                             <!-- ID -->
-                            <h4 >
+                            <h4 hidden>
                                 Trip id is: <span id="id_field"></span>
                             </h4>
                             <h4 >
@@ -47,21 +46,19 @@
                             <div id="date-group" class="form-group">
                                 <div id="displayDate"></div>
                                 <label for="date">start date:</label>
-                                <input type= "date" class="form-control" name="date" id="start_date"
-                                    required>
+                                <input type= "date" class="form-control" name="date" id="start_date" required>
                                 <!-- errors will go here -->
                             </div>
                             <!-- duration -->
                             <div id="duration-group" class="form-group">
                                 <label for="duration">duration:</label>
-                                <input type="text" class="form-control" name="duration" id="duration"
-                                    placeholder="write duration here">
+                                <input type="text" class="form-control" name="duration" id="duration" placeholder="write duration here" required>
                                 <!-- errors will go here -->
                             </div>          
                             <!-- price of the trip -->
                             <div id="price-group" class="form-group">
                                 <label for="price">price:</label>
-                                <input type="number" class="form-control" name="price" id="price" placeholder="1.0">
+                                <input type="number" class="form-control" name="price" id="price" placeholder="1.0" required>
                                 <!-- errors will go here -->
                             </div>
                             <!-- <br> -->
@@ -69,19 +66,19 @@
                             <h3>guide</h3>
                             <div id="guide-group" class="form-group">
                                     <label for="guide">guide name:</label>
-                                    <input type="text" class="form-control" name="guide_name" id="guide_name" placeholder="jhon">
+                                    <input type="text" class="form-control" name="guide_name" id="guide_name" placeholder="jhon" required>
                                     <!-- errors will go here -->
                                  </div>
                                 <!-- guide email-->
                                 <div id="guide-group" class="form-group">
                                     <label for="guide">guide email:</label>
-                                    <input type="text" class="form-control" name="guide_email" id="guide_email" placeholder="jhon">
+                                    <input type="text" class="form-control" name="guide_email" id="guide_email" placeholder="jhon" required>
                                     <!-- errors will go here -->
                                 </div>
                                 <!-- guide phone -->
                                 <div id="guide-group" class="form-group">
                                 <label for="guide">guide phone:</label>
-                                <input type="text" class="form-control" name="guide_phone" id="guide_phone" placeholder="jhon">
+                                <input type="text" class="form-control" name="guide_phone" id="guide_phone" placeholder="jhon" required>
                                 <!-- errors will go here -->
                                 </div>
                             <!-- site -->
@@ -89,17 +86,17 @@
                                 <h3>site</h3>
                                 <div id="site-group" class="form-group">
                                     <label for="guide">site name:</label>
-                                    <input type="text" class="form-control" name="site name" id="site_name" placeholder="area 51">
+                                    <input type="text" class="form-control" name="site name" id="site_name" placeholder="area 51" required>
                                     <!-- errors will go here -->
                                 </div>
                                 <div id="site-group" class="form-group">
                                     <label for="guide">site country:</label>
-                                    <input type="text" class="form-control" name="site country" id="site_country" placeholder="us">
+                                    <input type="text" class="form-control" name="site country" id="site_country" placeholder="us" required>
                                     <!-- errors will go here -->
                                 </div>
                             </div>
                             <br>
-                            <button type="submit" class="btn-slide-up" name="custom-btn" onclick="updateTripRequest()" >Submit <span class="fa fa-arrow-right"></span></button>
+                            <button type="submit" class="btn-slide-up" name="custom-btn" onclick="updateTripRequest()">Update<span class="fa fa-arrow-right"></span></button>
                         </form>
                         <button name="custom-btn" id="btn-slide-left" onclick="closeUpdate()">close update</button>
                     </div>
@@ -108,6 +105,6 @@
             <br>
 </main>
     </body>
-    <center><footer>All Rights Reserved to Yisrael Bar and Lidor Eliyahu Shelef :)</footer></center>
+    <footer>All Rights Reserved to Yisrael Bar and Lidor Eliyahu Shelef :)</footer>
 </html>
 
